Refactor CORS configuration to use allowed origin patterns